# Bullying-detection-system-v2-public

./: .gitignore  DEVICES-CONNECT-KEY-69a8ce6be094d6159222bfa4_orangepi_001.txt  README.md  credentials.csv  moke_infer ckpt.py  real_radar_normal.npy  sentinel.mindir  serial_audio_capture.py
.github/java-upgrade/20260309152930/: progress.md
AnQ/: iot_uploader.py  moke_infer_full.py  moke_infer_iot.py
AnQ/AnQ/: 完整系统部署指南.md
AnQ/AnQ/entry/: oh-package-lock.json5  oh-package.json5
AnQ/backend/: pom.xml
SDK_Code/HH-D02星闪派SDK/: 完整SDK链接.txt
SDK_Code/HH-D02星闪派SDK/雷达数据转发demo+声光报警反馈（client与server）/: BUILD.gn  README.md  radar_sle_proto.h  radar_spi.c  sle_uart_client.c  sle_uart_server.c  sle_uart_server.h
SDK_Code/HH-D02星闪派SDK/音频数据转发demo（client与server）/: sle_uart_client.c  test.py
SDK_Code/HH-D02星闪派SDK/音频数据转发demo（client与server）/LiteOS版本/: README.md
SDK_Code/HH-D02星闪派SDK/音频数据转发demo（client与server）/OpenHarmony版本/: BUILD.gn  sle_uart_client.c  sle_uart_client.h  sle_uart_server.c  sle_uart_server.h  sle_uart_server_adv.h
SDK_Code/RS6240雷达固件SDK/kernel/inc/: kernel_config.h  osi.h  osi_common.h  osi_memory.h  osi_mutex.h  osi_port.h  osi_queue.h  osi_semaphore.h  osi_thread.h  osi_timer.h  osi_util.h
SDK_Code/RS6240雷达固件SDK/libs/bootloader/: psdfboot.img  psdfboot.sym
SDK_Code/RS6240雷达固件SDK/libs/spiflash/: spiflash_list.img
SDK_Code/RS6240雷达固件SDK/libs/sys/: ReadMe.md
SDK_Code/RS6240雷达固件SDK/platform/boards/: board.c  board.h  board_config.h
SDK_Code/RS6240雷达固件SDK/platform/utils/: assert.h  common.h  compiler.h  config.h  cs.h  image_packet.c  img_cfg_template.yml  linker_cpuf.ld  linker_cpus.ld  types.h  (+4 more)
backend/: backend_api.py
backend/anq-server/: pom.xml
backend/spring-boot/: pom.xml
bullying_detection_complete/: ModelArts部署和训练指南_2025-12-05 10_24_24.md  credentials.csv  三英战光谷杯答辩稿.docx  三英战光谷杯答辩稿.md  下一步行动建议_2025-12-05 10_45_24.md  下一步计划_2025-12-05 11_35_51.md  下一步该怎么做_2025-12-05 11_52_58.md  技术亮点分析_2025-12-05 22_35_29.md  精美模型架构图绘制_2025-12-05 02_26_32.md
bullying_detection_complete/代码/bullying_detection/: README.md  config.json  quick_test.py  requirements.txt
config/: device_key.json.template
data/: radar_X.npy  radar_y.npy  real_audio_normal.npy
data/samples/MMFi/: MMFi_action_segments.csv  README.md
data/samples/datasets/: DOWNLOAD.md
docs/: README.md  model_description.md
frontend/AnQ/: build-profile.json5
frontend/harmonyos-app/AppScope/: app.json5
logs/: infer_log.txt  train_log.txt
models/: bullying_model.ckpt  bullying_model.mindir  sentinel_best.ckpt  sentinel_model.ckpt
scripts/: alarm.py  audio_receiver.py  bullying_analysis_v1.ipynb  bullying_analysis_v2.ipynb  bullying_analysis_v3_advanced.ipynb  download_audioset_subset.py  iot_uploader.py  main_pipeline.py  moke_infer_ckpt.py  moke_infer_full.py  moke_infer_iot.py  moke_infer_simple.py  obs_uploader.py  radar_receiver.py  sentinel_config.py  sentinel_model.py  serial_audio_capture.py  serial_radar_capture.py  solution_data_augmentation.md  solution_mix_actions.md  test_minimal.py
(+2602 files in other folders)
