# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("sle_uart") {
  sources = [
    "sle_uart_client.c",
    #"sle_uart_server.c",
    #"sle_uart_server_adv.c",
    #radar_spi.c",
  ]

  defines = [
    "CONFIG_UART_SUPPORT_TX",
    "CONFIG_UART_SUPPORT_RX",
    "BOARD_ASIC",
  ]
  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//device/soc/hisilicon/ws63v100/sdk/include/driver",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/rom/drivers/chips/ws63/porting/pinctrl",
    "//device/soc/hisilicon/ws63v100/sdk/include/middleware/services/bts/sle",
    "//foundation/communication/sle",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/debug",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/memory",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/schedule",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/uart",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/uart",
    "//device/soc/hisilicon/ws63v100/sdk/middleware/utils/common_headers/native",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//commonlibrary/utils_lite/include",
    "//device/soc/hisilicon/ws63v100/sdk/include",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/include",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/pinctrl",
    "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/gpio",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/gpio",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/gpio/v150",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/spi",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/spi",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/spi/v151",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/dma",
    "//device/soc/hisilicon/ws63v100/sdk/middleware/utils/app_init",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include",
    "//device/soc/hisilicon/ws63v100/sdk/middleware/chips/ws63/nv/nv_config/include",
    "//device/soc/hisilicon/ws63v100/sdk/open_source/libboundscheck/include",
  ]
}
